--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "chai": "^4.1.2",
     "html-minifier": "^3.5.3",
     "js-beautify": "^1.6.14",
-    "mocha": "^3.5.0",
-    "sqlite3": "^3.1.9"
+    "mocha": "^3.5.0"
   }
 }
